* Added option to hide gutters in post showcase.
* Added option to center header logo in Super User and Executive theme bases.
* Added option to center main menu buttons in Super User and Executive theme bases.
* Added option to insert search popup into main menu for Super User and Executive theme bases.
* Mobile menu toggle button will now match menu highlight color on Entrepreneur base.
* Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
* Expanded "background" option type image sizing options.
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Improved appearance of text logo option with "Entrepeneur" theme base.
* Improvements to styling of default widgets with lists.
* Mobile navigation toggle now displays at tablet viewport and in right of header, across all theme bases.
* Main menu font size made smaller for tablets and sticky menu to fit more buttons.
* Updated to FontAwesome 4.3.
* Minor styling improvements for bbPress.
* Changed Jumbotron element titles to use `<h2>` tags to fit in with header Typography on Theme Options page.
* Improvements to Icon Box element.
* Simplified header padding options for Super User theme base to desktop only.
* Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
* Fixed: Post Showcase (no masonry) not displaying right with excerpts.
* Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
* Fixed: Added missing breadcrumbs for bbPress user profiles.
* Fixed: bbPress tag_list PHP error at the top of topics when "Lead Topic" option is disabled.
* Fixed: Custom padding not applying to "popout" elements in Builder.
* Fixed: Widgets set as "panel" from theme options not displaying right with no widget title.
* Fixed: Issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.